--- a/rules.config
+++ b/rules.config
@@ -1,12 +1,12 @@
 {
   "exchange_code": "NSE",
-  "quantity": 1,
-  "buy_drop_pct": 0.01,
-  "buy_drop_abs": 0.2,
-  "take_profit_pct": 0.02,
-  "take_profit_abs": 0.1,
+  "quantity": 10,
+  "buy_drop_pct": 0.0018,
+  "buy_drop_abs": 0.9,
+  "take_profit_pct": 0.0018,
+  "take_profit_abs": 0.9,
   "stop_loss_pct": 0.01,
-  "poll_interval_sec": 5,
+  "poll_interval_sec": 15,
   "quote_source": "breeze",
   "debug": true,
   "min_warmup_samples": 3,
@@ -17,5 +17,6 @@
   "market_tz": "Asia/Kolkata",
   "market_open": "09:15",
   "market_close": "15:30",
-  "market_buffer_min": 1
+  "market_buffer_min": 1,
+  "show_day_chart": false
 }
