--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ breeze-connect==1.0.64
 filelock==3.16.0
 requests==2.32.3
 yfinance==0.2.43
-tzdata==2025.2
+tzdata==2024.1
+fastapi==0.115.0
+uvicorn==0.30.6
